# LANVideoStreamer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  commands.txt  conanfile.txt
include/: Landing.h  LandingPage.h  StreamingPage.h  VideoWidget.h  client.h  server.h
src/: CMakeLists.txt  Landing.cpp  LandingPage.cpp  StreamingPage.cpp  VideoWidget.cpp  client.cpp  main.cpp  server.cpp
